[gd_scene load_steps=20 format=2]

[ext_resource path="res://Sprites/ATTACKKKanimationforNEWgame/ATTACKKKanimationforNEWgame0001.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Store.gd" type="Script" id=2]
[ext_resource path="res://Sprites/ATTACKKKanimationforNEWgame/ATTACKKKanimationforNEWgame0025.png" type="Texture" id=3]
[ext_resource path="res://Fonts/metal lord.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Sprites/archer/archerframe0001.png" type="Texture" id=5]
[ext_resource path="res://Sprites/ATTACKKKanimationforNEWgame/ATTACKKKanimationforNEWgame0029.png" type="Texture" id=6]
[ext_resource path="res://Fonts/kenney_fontpackage/Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Sprites/ATTACKKKanimationforNEWgame/ATTACKKKanimationforNEWgame0070.png" type="Texture" id=8]
[ext_resource path="res://icon.png" type="Texture" id=9]
[ext_resource path="res://Sprites/archer/archerframe0061.png" type="Texture" id=10]
[ext_resource path="res://Sprites/archer/archerframe0046.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[node name="Store" type="Popup"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 35
custom_constants/margin_top = 10
custom_constants/margin_left = 35
custom_constants/margin_bottom = 250

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_left = 35.0
margin_top = 10.0
margin_right = 989.0
margin_bottom = 350.0
color = Color( 0.0156863, 0.392157, 0.286275, 0.807843 )

[node name="TextureButton" type="TextureButton" parent="."]
visible = false
margin_left = 24.0
margin_top = 14.0
margin_right = 123.0
margin_bottom = 107.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="PriceTag" type="Label" parent="TextureButton"]
margin_left = 15.0
margin_top = 71.0
margin_right = 55.0
margin_bottom = 85.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Footman: $6"

[node name="Archer" type="TextureButton" parent="."]
margin_left = -15.0
margin_top = 220.0
margin_right = 214.0
margin_bottom = 347.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )
expand = true
stretch_mode = 5

[node name="PriceTag" type="Label" parent="Archer"]
margin_left = 22.0
margin_top = 103.0
margin_right = 175.0
margin_bottom = 127.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Archer: $20"
align = 1
valign = 1

[node name="Footman" type="TextureButton" parent="."]
margin_left = 39.0
margin_top = 14.0
margin_right = 151.0
margin_bottom = 126.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="PriceTag" type="Label" parent="Footman"]
margin_top = 85.0
margin_right = 147.0
margin_bottom = 109.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Footman: $6"

[node name="Knight" type="TextureButton" parent="."]
margin_left = 39.0
margin_top = 140.0
margin_right = 122.0
margin_bottom = 212.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="PriceTag" type="Label" parent="Knight"]
margin_left = -14.0
margin_top = 70.0
margin_right = 98.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Knight: $12"
align = 1
valign = 1

[node name="BigMonke" type="TextureButton" parent="."]
margin_left = 186.0
margin_top = 28.0
margin_right = 269.0
margin_bottom = 100.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="PriceTag" type="Label" parent="BigMonke"]
margin_left = -14.0
margin_top = 70.0
margin_right = 98.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Big Monke : $30"
align = 1
valign = 1

[node name="Ditch" type="TextureButton" parent="."]
margin_left = 186.0
margin_top = 123.0
margin_right = 269.0
margin_bottom = 195.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="PriceTag" type="Label" parent="Ditch"]
margin_left = -14.0
margin_top = 70.0
margin_right = 98.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Ditch: $12"
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
margin_left = 481.0
margin_top = 14.0
margin_right = 520.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "EXIT"
flat = true

[node name="Money" type="Label" parent="."]
margin_left = 879.0
margin_top = 14.0
margin_right = 999.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Money: $0"

[connection signal="pressed" from="Archer" to="." method="_on_Archer_pressed"]
[connection signal="pressed" from="Footman" to="." method="_on_Footman_pressed"]
[connection signal="pressed" from="Knight" to="." method="_on_Knight_pressed"]
[connection signal="pressed" from="BigMonke" to="." method="_on_BigMonke_pressed"]
[connection signal="pressed" from="Ditch" to="." method="_on_Ditch_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
